updating references and fundamentals

--- a/references/references.bib
+++ b/references/references.bib
@@ -1,76 +1,89 @@
-@online{LSVRC,
-	author = {LSVRC},
-	title  = {Large scale visual recognition challenge},
-	urldate = {2018-04-03},
-	year = {2010},
-	url    = {http://www.image-net.org/challenges/LSVRC},
-	keywords = {online}
+@unpublished{HolgerRegenbrechtGregoryBaratoff2005,
+author = {{Holger Regenbrecht, Gregory Baratoff}, Wilhelm Wilke},
+pages = {56},
+title = {{Augmented Reality Projects in the Automotive and Aerospace Industries}},
+url = {https://ieeexplore.ieee.org/stamp/stamp.jsp?tp={\&}arnumber=1528433},
+year = {2005}
 }
-
-@online{typical_cnn_img,
-	author  = {Wikimedia Commons},
-	title   = {Typical CNN architecture},
-	year    = {2015},
-	urldate = {2018-04-03},
-	url     = {https://upload.wikimedia.org/wikipedia/commons/6/63/Typical_cnn.png},
-	keywords= {image}
+@book{Tonnis2010,
+author = {T{\"{o}}nnis, Marcus},
+isbn = {978-3-642-14178-2},
+pages = {199},
+title = {{Augmented Reality EinblickeindieErweiterteRealit{\"{a}}t}},
+year = {2010}
 }
-
-@article{doi:10.1162/neco.1989.1.4.541,
-	author = { Y. LeCun  and  B. Boser  and  J. S. Denker  and  D. Henderson  and  R. E. Howard  and  W. Hubbard  and  L. D. Jackel },
-	title = {Backpropagation Applied to Handwritten Zip Code Recognition},
-	journal = {Neural Computation},
-	volume = {1},
-	number = {4},
-	pages = {541-551},
-	year = {1989},
-	doi = {10.1162/neco.1989.1.4.541},
-	URL = {https://doi.org/10.1162/neco.1989.1.4.541},
-	eprint = {https://doi.org/10.1162/neco.1989.1.4.541},
-	abstract = { The ability of learning networks to generalize can be greatly enhanced by providing constraints from the task domain. This paper demonstrates how such constraints can be integrated into a backpropagation network through the architecture of the network. This approach has been successfully applied to the recognition of handwritten zip code digits provided by the U.S. Postal Service. A single network learns the entire recognition operation, going from the normalized image of the character to the final classification. }
+@unpublished{XiangyuWangNingGu2008,
+author = {{Xiangyu Wang, Ning Gu}, David Marchant},
+pages = {17},
+title = {{AN EMPIRICAL STUDY ON DESIGNERS' PERCEPTIONS OF AUGMENTED REALITY WITHIN AN ARCHITECTURAL FIRM}},
+url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.212.1910{\&}rep=rep1{\&}type=pdf},
+year = {2008}
 }
-
-@conference {288,
-	title = {ROS: an open-source Robot Operating System},
-	booktitle = {ICRA Workshop on Open Source Software},
-	year = {2009},
-	attachments = {http://www.willowgarage.com/sites/default/files/icraoss09-ROS.pdf},
-	author = {Morgan Quigley and Ken Conley and Brian P. Gerkey and Josh Faust and Tully Foote and Jeremy Leibs and Rob Wheeler and Andrew Y. Ng}
+@book{MaryBethRossonJohnM.CarrollDianeD.Cerra2002,
+author = {{Mary Beth Rosson, John M. Carroll, Diane D. Cerra}, Natalie Hill},
+isbn = {1-55860-712.9},
+title = {{Usability Engineering: Scenario-Based Development of Human-Computer}},
+url = {https://books.google.de/books?hl=de{\&}lr={\&}id=sRPg0IYhYFYC{\&}oi=fnd{\&}pg=PP2{\&}dq=usability+engineering{\&}ots=mHJu6hTEKM{\&}sig=s2jBLnfM3jymlx7SmONhjV3{\_}lj0{\#}v=onepage{\&}q=usability engineering{\&}f=false},
+year = {2002}
 }
-
-@inproceedings{Abadi:2016:TSL:3026877.3026899,
-	author = {Abadi, Mart\'{\i}n and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and Kudlur, Manjunath and Levenberg, Josh and Monga, Rajat and Moore, Sherry and Murray, Derek G. and Steiner, Benoit and Tucker, Paul and Vasudevan, Vijay and Warden, Pete and Wicke, Martin and Yu, Yuan and Zheng, Xiaoqiang},
-	title = {TensorFlow: A System for Large-scale Machine Learning},
-	booktitle = {Proceedings of the 12th USENIX Conference on Operating Systems Design and Implementation},
-	series = {OSDI'16},
-	year = {2016},
-	isbn = {978-1-931971-33-1},
-	location = {Savannah, GA, USA},
-	pages = {265--283},
-	numpages = {19},
-	url = {http://dl.acm.org/citation.cfm?id=3026877.3026899},
-	acmid = {3026899},
-	publisher = {USENIX Association},
-	address = {Berkeley, CA, USA},
-} 
-
-@misc{chollet2015,
-	author={Chollet, Fran\c{c}ois and others},
-	title = {Keras},
-	year = {2015},
-	publisher = {GitHub},
-	journal = {GitHub repository},
-	urldate = {2018-04-03},
-	howpublished = {\url{https://github.com/fchollet/keras}},
-	keywords= {online}
+@book{RexHartson2012,
+author = {{Rex Hartson}, Pardha S. Payla},
+isbn = {978-0-12-385241-0},
+pages = {937},
+title = {{The UX Book}},
+year = {2012}
 }
-
-@book{Sutton:1998:IRL:551283,
-	author = {Sutton, Richard S. and Barto, Andrew G.},
-	title = {Introduction to Reinforcement Learning},
-	year = {1998},
-	isbn = {0262193981},
-	edition = {1st},
-	publisher = {MIT Press},
-	address = {Cambridge, MA, USA},
+@book{Spiekermann2016,
+author = {Spiekermann, Sarah},
+isbn = {978-1-4822-2635-5},
+pages = {257},
+title = {{Ethical IT Innovation}},
+year = {2016}
+}
+@book{Nielsen1994,
+author = {Nielsen, Jakob},
+isbn = {0125184069},
+pages = {362},
+title = {{Usability Engineering}},
+url = {https://books.google.de/books?hl=de{\&}lr={\&}id=DBOowF7LqIQC{\&}oi=fnd{\&}pg=PP1{\&}dq=usability{\&}ots=Bl5aUOFUCN{\&}sig=8apn{\_}0ZCNfu{\_}NhbGpjnUGKTgyjY{\#}v=onepage{\&}q=usability{\&}f=false},
+year = {1994}
+}
+@book{BimberOliver2005,
+author = {{Bimber Oliver}, Raskar Ramesh},
+pages = {393},
+title = {{Spatial Augmented Reality Merging Real and Virtual Worlds}},
+url = {http://pages.cs.wisc.edu/{~}dyer/cs534/papers/SAR.pdf},
+year = {2005}
+}
+@unpublished{PaulMilgram1994,
+author = {{Paul Milgram}, Fumio KISHINO},
+title = {{A Taxonomy of Mixed Reality Visual Displays}},
+url = {https://search.ieice.org/bin/summary.php?id=e77-d{\_}12{\_}1321},
+year = {1994}
+}
+@book{MichaelRichter2016,
+author = {{Michael Richter}, Markus Fl{\"{u}}cker},
+pages = {219},
+title = {{Usability und UX kompakt Produkte f{\"{u}}r Menschen}},
+year = {2016}
+}
+@unpublished{RonaldT.1997,
+author = {{Ronald T.}, Azuma},
+title = {{A Survey of Augmented Reality}},
+url = {https://www.cs.unc.edu/{~}azuma/ARpresence.pdf},
+year = {1997}
+}
+@misc{Schanze2018,
+author = {Schanze, Robert},
+title = {{Was ist Mixed Reality? – Unterschied zu Virtual {\&} Augmented Reality erkl{\"{a}}rt}},
+url = {https://www.giga.de/extra/mixed-reality/},
+urldate = {2019-05-17},
+year = {2018}
+}
+@book{DieterSchmalstieg2016,
+author = {{Dieter Schmalstieg} and H{\"{o}}llerer, Tobias},
+isbn = {978-0-321-88357-5},
+pages = {496},
+title = {{Augmented reality: principles and practice}},
+year = {2016}
 }
