--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 %% Based on https://ai-bachelor.htw-berlin.de/files/Stg/AI/richtlinie_ba-arbeit_ai_06_02_13.pdf
 \include{titles/titleGraduation}
 \gradeType{Bachelor of Science (B.Sc.)}
-\secondExaminer{Dipl.-Sporting. Andreas Geiger}
+\secondExaminer{Dipl. Sport-ing. Andreas Geiger}
 
 % Titles Config End
 
@@ -75,6 +75,5 @@
 
 % Eigenständigkeitserklärung
 \input{erklaerungen/Eigenstaendigkeitserklaerung_bachelorthesis} 
-
 
 \end{document}
