--- a/settings.tex
+++ b/settings.tex
@@ -140,7 +140,7 @@
 	keywordstyle=\color{antiquefuchsia},
 	otherkeywords={self, else},
 	emphstyle=\color{bostonuniversityred},
-	emph={shape,units,name,filters,kernel_size,activation,padding,kernel_initializer,kernel_regularizer,bias_initializer,inputs,outputs,mode,distribution,minval,maxval, callback_args, low, high, limit, window_length, size, mu, theta, sigma},
+	emph={shape,units,name,filters,kernel_size,activation,padding,kernel_initializer,kernel_regularizer,bias_initializer,inputs,outputs,mode,distribution,minval,val, callback_args, low, high, limit, window_length, size, mu, theta, sigma},
 	stringstyle=\color{Ao},
 	showspaces=false,
 	showstringspaces=false,
