--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -3,3 +3,17 @@
 	name=API,
 	description={Kurzbeschreibung was eine API darstellt.}
 }
+
+
+\newglossaryentry{ar}
+{
+	name=AR,
+	description={Kurzbeschreibung für Augmented Reality (zu dt. Erweiterte Realität).}
+}
+
+
+\newglossaryentry{db}
+{
+	name=DB,
+	description={Kurzbeschreibung für Database (z. dt. Datenbank).}
+}
