--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,7 @@
 \include{settings}
-
+\usepackage{tabu}
+\usepackage{makecell}
+\usepackage{flafter} 
 % Titles Config - CHOOSE ONE section for title format
 
 %% Used for titleGraduation Bachelor
@@ -14,7 +16,7 @@
 \title{Entwurf und Implementierung eines Augmented Reality Systems für Produkt-Design-Feedback durch den Endkunden }
 \author{Ali Bektas}
 \matrikelnr{s0559003}
-\submitDate{11.08.2019}
+\submitDate{07.09.2019}
 \firstExaminer{Prof. Dr. Thomas Jung}
 % End Titles
 
