--- a/erklaerungen/Eigenstaendigkeitserklaerung_bachelorthesis.tex
+++ b/erklaerungen/Eigenstaendigkeitserklaerung_bachelorthesis.tex
@@ -4,8 +4,8 @@ Hiermit versichere ich, dass ich die vorliegende Bachelorarbeit selbstständig u
 
 \vskip 1cm
 
-Berlin, den XX.XX.2018
+Berlin, den 09.09.2019
 
 \vskip 1.5cm
 
-Vorname Nachname
+Ali Bektas
