--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -1,19 +1,57 @@
 \newglossaryentry{api}
 {
-	name=API,
-	description={Kurzbeschreibung was eine API darstellt.}
+	name={API},
+	description={Kurzbeschreibung für Application Programmer Interface}
 }
-
-
 \newglossaryentry{ar}
 {
-	name=AR,
-	description={Kurzbeschreibung für Augmented Reality (zu dt. Erweiterte Realität).}
+	name={AR},
+	description={Kurzbeschreibung für Augmented Reality (zu dt. Erweiterte Realität)}
 }
 
-
-\newglossaryentry{db}
+\newglossaryentry{vr}
 {
-	name=DB,
-	description={Kurzbeschreibung für Database (z. dt. Datenbank).}
+	name={VR},
+	description={Kurzbeschreibung für Virtual Reality (zu dt. Virtuelle Realität)}
 }
+\newglossaryentry{slam}
+{
+	name={SLAM},
+	description={sample 4}
+}
+\newglossaryentry{ptam}
+{
+	name={PTAM},
+	description={sample 4}
+}
+
+\newacronym[longplural={Frames per Second}]{fpsLabel}{FPS}{Frame per Second}
+
+\newglossaryentry{gameengine}{name={Game Engine},description={sample 3}}
+\newglossaryentry{serialisierung}{name={Serialisierung},description={sample 4}}
+\newglossaryentry{deserialisierung}{name={Deserialisierung},description={sample 4}}
+\newglossaryentry{klassendiagramm}{name={Klassendiagramm},description={sample 4}}
+
+\longnewglossaryentry{framework}
+{
+	name=Framework
+}
+{Rahmenstruktur, Programmgerüst welches in der Softwaretechnik verwendet wird.}
+
+\longnewglossaryentry{sdk}
+{
+	name=SDK
+}
+{Rahmenstruktur, Programmgerüst welches in der Softwaretechnik verwendet wird.}
+
+\longnewglossaryentry{visualisierungspipeline}
+{
+	name=Visualisierugspipeline
+}
+{Rahmenstruktur, Programmgerüst welches in der Softwaretechnik verwendet wird.}
+
+\longnewglossaryentry{cad}
+{
+	name=CAD
+}
+{Rahmenstruktur, Programmgerüst welches in der Softwaretechnik verwendet wird.}
