--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 \usepackage{tabu}
 \usepackage{makecell}
 \usepackage{flafter} 
+\usepackage{pdfpages}
 % Titles Config - CHOOSE ONE section for title format
 
 %% Used for titleGraduation Bachelor
