--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,9 @@
 \usepackage{makecell}
 \usepackage{flafter} 
 \usepackage{pdfpages}
+\usepackage{longtable}
+\usepackage{ltablex}
+\usepackage{acronym}
 % Titles Config - CHOOSE ONE section for title format
 
 %% Used for titleGraduation Bachelor
@@ -17,7 +20,7 @@
 \title{Entwurf und Implementierung eines Augmented Reality Systems für Produkt-Design-Feedback durch den Endkunden }
 \author{Ali Bektas}
 \matrikelnr{s0559003}
-\submitDate{07.09.2019}
+\submitDate{09.09.2019}
 \firstExaminer{Prof. Dr. Thomas Jung}
 % End Titles
 
@@ -52,7 +55,7 @@
 % List of Tables
 \listoftables \clearpage
 % Source Code Content
-\lstlistoflistings \clearpage
+%\lstlistoflistings \clearpage
 
 \printindex \clearpage
 
