--- a/settings.tex
+++ b/settings.tex
@@ -120,7 +120,8 @@
 \newcommand\Includegraphics[2][]{\addvbuffer[5pt 0pt]{\includegraphics[#1]{#2}}}
 
 %Umbenennungen
-\renewcommand{\lstlistlistingname}{Source Code Content}
+%\renewcommand{\lstlistlistingname}{Source Code Content}
+
 
 %Pluszeichen in der Reference beim zitieren ausblenden
 \renewcommand*{\labelalphaothers}{}
