--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -1,4 +1,4 @@
-\acrodef{PTAM}[PTAM]{\emph{Example}}
+
 \newglossaryentry{api}
 {
 	name={API},
@@ -15,23 +15,21 @@
 	name={VR},
 	description={Kurzbeschreibung für Virtual Reality (zu dt. Virtuelle Realität)}
 }
+
 \newglossaryentry{slam}
 {
 	name={SLAM},
-	description={sample 4}
+	description={kurz für Simultaneous Localization and Mapping)}
 }
+
 \newglossaryentry{ptam}
 {
 	name={PTAM},
-	description={sample 4}
+	description={Paralelll Tracking and Mapping}
 }
 
 \newacronym[longplural={Frames per Second}]{fpsLabel}{FPS}{Frame per Second}
 
-\newglossaryentry{gameengine}{name={Game Engine},description={sample 3}}
-\newglossaryentry{serialisierung}{name={Serialisierung},description={sample 4}}
-\newglossaryentry{deserialisierung}{name={Deserialisierung},description={sample 4}}
-\newglossaryentry{klassendiagramm}{name={Klassendiagramm},description={sample 4}}
 
 \longnewglossaryentry{framework}
 {
